--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "dompurify": "^3.2.6",
     "lucide-react": "^0.543.0",
     "next": "15.5.2",
     "react": "19.1.0",
